# Rust-CSV-Data-Parser

./: Cargo.toml  README.md  cleaned_reviews.csv  data_parser.py  pyproject.toml
src/: error.rs  lib.rs  main.rs  models.rs
src/parsers/: date.rs  image_links.rs  location.rs  mod.rs  rating.rs
