[package]
name = "sb_data_cleaner"
version = "0.1.0"
edition = "2021"

[lib]
name = "sb_data_cleaner"
crate-type = ["cdylib"]

[dependencies]
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
chrono = "0.4"
thiserror = "1.0"
pyo3 = { version = "0.19", features = ["extension-module"] }
